# python-exec-assert

./: .gitignore  Makefile  pyproject.toml
src/exec_assert/: __init__.py  command.py  condition.py
tests/exec_assert/: test_init.py
