[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-exec-assert"
version = "0.0.2"
authors = [
  { name="Kim Yongbeom", email="yongbeom.sg@gmail.com" },
]
description = "A package to execute a command and make assertions about the result."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Yongbeom-Kim/python-exec-assert"
Issues = "https://github.com/Yongbeom-Kim/python-exec-assert/issues"


[tool.mypy]
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

disallow_untyped_defs = true
disallow_any_unimported = true

check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
